// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli normal cli output should output checkup result 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Outdated Dependencies ===

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2
■ major (2)  ■ minor (0)  ■ patch (0)  

=== Number of TODOs ===

TODOs found: 0

=== Lines of Code ===

File type   Total LOC   Todos 
js          3           0     
json        175         0     

checkup v0.0.0
config ae3266e319bdfb51db83810a2f4dd161

"
`;

exports[`@checkup/cli normal cli output should output checkup result in JSON 1`] = `
"{
  \\"meta\\": {
    \\"project\\": {
      \\"name\\": \\"checkup-app\\",
      \\"version\\": \\"0.0.0\\",
      \\"repository\\": {
        \\"totalCommits\\": 0,
        \\"totalFiles\\": 0,
        \\"age\\": \\"0 days\\",
        \\"activeDays\\": \\"0 days\\"
      }
    },
    \\"checkup\\": {
      \\"configHash\\": \\"ae3266e319bdfb51db83810a2f4dd161\\",
      \\"version\\": \\"0.0.0\\"
    }
  },
  \\"results\\": [
    {
      \\"meta\\": {
        \\"taskName\\": \\"outdated-dependencies\\",
        \\"friendlyTaskName\\": \\"Outdated Dependencies\\",
        \\"taskClassification\\": {
          \\"category\\": \\"insights\\",
          \\"priority\\": \\"high\\"
        }
      },
      \\"result\\": {
        \\"dependencies\\": [
          {
            \\"moduleName\\": \\"react\\",
            \\"homepage\\": \\"https://reactjs.org/\\",
            \\"latest\\": \\"16.13.1\\",
            \\"installed\\": \\"15.6.2\\",
            \\"isInstalled\\": true,
            \\"notInstalled\\": false,
            \\"packageWanted\\": \\"15.6.2\\",
            \\"packageJson\\": \\"^15.0.0\\",
            \\"devDependency\\": false,
            \\"mismatch\\": false,
            \\"semverValid\\": \\"15.6.2\\",
            \\"easyUpgrade\\": false,
            \\"bump\\": \\"major\\",
            \\"unused\\": true
          },
          {
            \\"moduleName\\": \\"react-dom\\",
            \\"homepage\\": \\"https://reactjs.org/\\",
            \\"latest\\": \\"16.13.1\\",
            \\"installed\\": \\"15.6.2\\",
            \\"isInstalled\\": true,
            \\"notInstalled\\": false,
            \\"packageWanted\\": \\"15.6.2\\",
            \\"packageJson\\": \\"^15.0.0\\",
            \\"devDependency\\": false,
            \\"mismatch\\": false,
            \\"semverValid\\": \\"15.6.2\\",
            \\"easyUpgrade\\": false,
            \\"bump\\": \\"major\\",
            \\"unused\\": true
          }
        ]
      }
    },
    {
      \\"meta\\": {
        \\"taskName\\": \\"todos\\",
        \\"friendlyTaskName\\": \\"Number of TODOs\\",
        \\"taskClassification\\": {
          \\"category\\": \\"insights\\",
          \\"priority\\": \\"low\\"
        }
      },
      \\"result\\": {
        \\"todos\\": [
          {
            \\"displayName\\": \\"Todo\\",
            \\"type\\": \\"todo\\",
            \\"data\\": [],
            \\"total\\": 0
          }
        ]
      }
    },
    {
      \\"meta\\": {
        \\"taskName\\": \\"lines-of-code\\",
        \\"friendlyTaskName\\": \\"Lines of Code\\",
        \\"taskClassification\\": {
          \\"category\\": \\"insights\\",
          \\"priority\\": \\"low\\"
        }
      },
      \\"result\\": {
        \\"fileResults\\": [
          {
            \\"errors\\": [],
            \\"results\\": [
              {
                \\"total\\": 3,
                \\"source\\": 2,
                \\"comment\\": 0,
                \\"single\\": 0,
                \\"block\\": 0,
                \\"mixed\\": 0,
                \\"empty\\": 1,
                \\"todo\\": 0,
                \\"blockEmpty\\": 0
              }
            ],
            \\"fileExension\\": \\"js\\"
          },
          {
            \\"errors\\": [],
            \\"results\\": [
              {
                \\"total\\": 165,
                \\"source\\": 165,
                \\"comment\\": 22,
                \\"single\\": 22,
                \\"block\\": 0,
                \\"mixed\\": 22,
                \\"empty\\": 0,
                \\"todo\\": 0,
                \\"blockEmpty\\": 0
              },
              {
                \\"total\\": 10,
                \\"source\\": 10,
                \\"comment\\": 0,
                \\"single\\": 0,
                \\"block\\": 0,
                \\"mixed\\": 0,
                \\"empty\\": 0,
                \\"todo\\": 0,
                \\"blockEmpty\\": 0
              }
            ],
            \\"fileExension\\": \\"json\\"
          }
        ]
      }
    }
  ]
}
"
`;

exports[`@checkup/cli normal cli output should run a single task if the task option is specified 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 1`] = `
"
Checkup report generated for another-project v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Outdated Dependencies ===

 0
■ major (0)  ■ minor (0)  ■ patch (0)  

=== Number of TODOs ===

TODOs found: 2

=== Lines of Code ===

File type   Total LOC   Todos 
js          1           1     
hbs         1           0     

checkup v0.0.0
config ae3266e319bdfb51db83810a2f4dd161

"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 2`] = `
"
Checkup report generated for another-project v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Outdated Dependencies ===

 0
■ major (0)  ■ minor (0)  ■ patch (0)  

=== Number of TODOs ===

TODOs found: 3

=== Lines of Code ===

File type   Total LOC   Todos 
js          5           2     
hbs         1           0     
json        7           0     

checkup v0.0.0
config ae3266e319bdfb51db83810a2f4dd161

"
`;

exports[`@checkup/cli normal cli output should use the config at the config path if provided 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

=== Outdated Dependencies ===

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2
■ major (2)  ■ minor (0)  ■ patch (0)  

=== Number of TODOs ===

TODOs found: 0

=== Lines of Code ===

File type   Total LOC   Todos 
js          3           0     
json        175         0     

checkup v0.0.0
config ae3266e319bdfb51db83810a2f4dd161

"
`;
